--- a/style.css
+++ b/style.css
@@ -1,18 +1,8 @@
 /*
 Theme Name: 	Josef Zacek
-Description: 	josef Zacek - totally nude Wordpress theme!
+Description: 	josef Zacek - totally nude WordPress theme!
 Version: 		4.0
 Author: 		Josef Zacek
 Author URI: 	http://josefzacek.com
 Tags: 			naked, clean, basic
 */
-
-
-
-/* ---------------------------------------------------------------------------------------------------------- 
-import reset.css 
----------------------------------------------------------------------------------------------------------- */
-
-@import "css/reset.css";
-
-/* custom styles*/
