--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 /*
 Theme Name: 	Josef Zacek
-Description: 	josef Zacek - totally nude WordPress theme!
+Description: 	josef Zacek - custom WordPress theme created from scratch!
 Version: 		4.0
 Author: 		Josef Zacek
 Author URI: 	http://josefzacek.com
-Tags: 			naked, clean, basic
 */
