--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: 	Josef Zacek
-Description: 	josef Zacek - custom WordPress theme created from scratch!
+Description: 	Custom WordPress theme created from scratch by Josef Zacek
 Version: 		4.0
 Author: 		Josef Zacek
 Author URI: 	http://josefzacek.com
