--- a/style.css
+++ b/style.css
@@ -3,4 +3,9 @@ Theme Name: 	Josef Zacek
 Description: 	Custom WordPress theme created from scratch by Josef Zacek
 Author: 		Josef Zacek
 Author URI: 	http://josefzacek.com
+Version: 		1.0
+License: 		GNU General Public License v2 or later
+License URI: 	http://www.gnu.org/licenses/gpl-2.0.html
+Tags: 			responsive-layout, one-column, two-columns
+Theme URI: 		http://josefzacek.com
 */
